force-app/main/default/objects/Missed_Collection__c/Missed_Collection__c.object-meta.xml
<CustomObject>
    <label>Missed Collection</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Missed Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missed Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>