force-app/main/default/objects/Missed_Collection__c/fields/AllocatedDay__c.field-meta.xml
<CustomField>
    <fullName>AllocatedDay__c</fullName>
    <formula>CASE(WEEKDAY(DispatchAllocated__r.Dispatch_Date__c),
1, &quot;Sunday&quot;,
2, &quot;Monday&quot;,
3, &quot;Tuesday&quot;,
4, &quot;Wednesday&quot;,
5, &quot;Thursday&quot;,
6, &quot;Friday&quot;,
&quot;Saturday&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Day</label>
    <type>Text</type>
</CustomField>