force-app/main/default/objects/Missed_Collection__c/fields/AllocatedRoundType__c.field-meta.xml
<CustomField>
    <fullName>AllocatedRoundType__c</fullName>
    <formula>TEXT(DispatchAllocated__r.RoundId__r.Round_Type__c)</formula>
    <label>Allocated Round Type</label>
    <type>Text</type>
</CustomField>