force-app/main/default/objects/Missed_Collection__c/fields/AllocatedWaypointStatus__c.field-meta.xml
<CustomField>
    <fullName>AllocatedWaypointStatus__c</fullName>
    <formula>TEXT(CollectionWaypoint__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Waypoint Status</label>
    <type>Text</type>
</CustomField>