force-app/main/default/objects/Missed_Collection__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Missed Collections</relationshipLabel>
    <relationshipName>Missed_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>