force-app/main/default/objects/Missed_Collection__c/fields/Case_CP_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_CP_ID__c</fullName>
    <label>Case CP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>