force-app/main/default/objects/Missed_Collection__c/fields/Collection_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Collection_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Missed Collections</relationshipLabel>
    <relationshipName>Missed_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>