force-app/main/default/objects/Missed_Collection__c/fields/CollectionWaypoint__c.field-meta.xml
<CustomField>
    <fullName>CollectionWaypoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Waypoint</label>
    <referenceTo>Collection_Waypoints__c</referenceTo>
    <relationshipLabel>Missed Collection</relationshipLabel>
    <relationshipName>MissedCollection</relationshipName>
    <type>Lookup</type>
</CustomField>