force-app/main/default/objects/Missed_Collection__c/fields/CP_Missed_Collection_Id__c.field-meta.xml
<CustomField>
    <fullName>CP_Missed_Collection_Id__c</fullName>
    <label>CP_Missed_Collection_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>