force-app/main/default/objects/Missed_Collection__c/fields/Daily_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Daily_Dispatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Dispatch</label>
    <referenceTo>DailyDispatch__c</referenceTo>
    <relationshipLabel>Missed Collections</relationshipLabel>
    <relationshipName>Missed_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>