force-app/main/default/objects/Missed_Collection__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Monday&quot;), &quot;Monday&quot;+ &quot;;&quot;, NULL) + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Tuesday&quot;), &quot;Tuesday&quot;+ &quot;;&quot;, NULL)  + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Wednesday&quot;), &quot;Wednesday&quot;+ &quot;;&quot;, NULL) + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Thursday&quot;), &quot;Thursday&quot;+ &quot;;&quot;, NULL) + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Friday&quot;), &quot;Friday&quot;+ &quot;;&quot;, NULL) + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Saturday&quot;), &quot;Saturday&quot;+ &quot;;&quot;, NULL)  + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Sunday&quot;), &quot;Sunday&quot;+ &quot;;&quot;, NULL)</formula>
    <label>Days</label>
    <type>Text</type>
</CustomField>