force-app/main/default/objects/Missed_Collection__c/fields/DispatchAllocated__c.field-meta.xml
<CustomField>
    <fullName>DispatchAllocated__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dispatch Allocated</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Dispatch must be of today and not completed.</errorMessage>
        <filterItems>
            <field>DailyDispatch__c.Dispatch_Date__c</field>
            <operation>equals</operation>
            <valueField>DailyDispatch__c.TODAY__c</valueField>
        </filterItems>
        <filterItems>
            <field>DailyDispatch__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DailyDispatch__c</referenceTo>
    <relationshipLabel>Missed Collections Allocated</relationshipLabel>
    <relationshipName>MissedCollectionsAllocated</relationshipName>
    <type>Lookup</type>
</CustomField>