force-app/main/default/objects/Missed_Collection__c/fields/Is_supplier_missed__c.field-meta.xml
<CustomField>
    <fullName>Is_supplier_missed__c</fullName>
    <formula>AND(Collection_Schedule__r.Supplier__r.Name != null, Collection_Schedule__r.Supplier__r.Name != &apos;First Mile Ltd&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is supplier missed?</label>
    <type>Checkbox</type>
</CustomField>