force-app/main/default/objects/Missed_Collection__c/fields/IsAutoAllocateDispatch__c.field-meta.xml
<CustomField>
    <fullName>IsAutoAllocateDispatch__c</fullName>
    <formula>AND(
Case__r.Account.CollectionPriority__c != &apos;New&apos;,
ISPICKVAL(Case__r.Priority, &apos;P3&apos;), 
ISPICKVAL(Case__r.Requested_Collection_Time__c, &apos;PM&apos;), 
HOUR(TIMEVALUE(Case__r.CreatedDate)) &lt;= 15, 
MOD(DATEVALUE(Case__r.CreatedDate) - DATE(2024, 1, 1), 7) &lt; 5, 
ISPICKVAL(Daily_Dispatch__r.RoundId__r.Round_Type__c, &apos;PM&apos;), 
Case__r.Location__r.ParentId != &apos;001w000001QGnfpAAD&apos;
)</formula>
    <label>Auto Allocate Dispatch?</label>
    <type>Checkbox</type>
</CustomField>