force-app/main/default/objects/Missed_Collection__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <formula>OR(ISPICKVAL(CollectionWaypoint__r.Status__c, &apos;Completed&apos;), ISPICKVAL(CollectionWaypoint__r.Status__c, &apos;Part Completed&apos;))</formula>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>