force-app/main/default/objects/Missed_Collection__c/fields/IsExternalSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsExternalSupplier__c</fullName>
    <formula>Collection_Schedule__r.IsExternalSupplier__c</formula>
    <label>External Supplier?</label>
    <type>Checkbox</type>
</CustomField>