force-app/main/default/objects/Missed_Collection__c/fields/Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_ID__c</fullName>
    <formula>Case__r.Location__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location ID</label>
    <type>Text</type>
</CustomField>