force-app/main/default/objects/Missed_Collection__c/fields/LocationName__c.field-meta.xml
<CustomField>
    <fullName>LocationName__c</fullName>
    <formula>Case__r.Account.Name</formula>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>