force-app/main/default/objects/Missed_Collection__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>Collection_Schedule__r.Supplier_Product__r.Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>