force-app/main/default/objects/Missed_Collection__c/fields/RequestedCollectionTime__c.field-meta.xml
<CustomField>
    <fullName>RequestedCollectionTime__c</fullName>
    <formula>TEXT(Case__r.Requested_Collection_Time__c)</formula>
    <label>Requested Collection Time</label>
    <type>Text</type>
</CustomField>