force-app/main/default/objects/Missed_Collection__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <formula>Collection_Schedule__r.Round_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Name</label>
    <type>Text</type>
</CustomField>