force-app/main/default/objects/Missed_Collection__c/fields/RoundId__c.field-meta.xml
<CustomField>
    <fullName>RoundId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Missed Collections</relationshipLabel>
    <relationshipName>Missed_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>