force-app/main/default/objects/Missed_Collection__c/fields/Streams__c.field-meta.xml
<CustomField>
    <fullName>Streams__c</fullName>
    <formula>IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c  , &quot;Mixed Recycling&quot;), &quot;Mixed Recycling&quot;+ &quot;;&quot;, NULL) + 
IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c , &quot;General Waste&quot;), &quot;General Waste&quot;+ &quot;;&quot;, NULL) + 
IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c, &quot;Food&quot;), &quot;Food&quot;+ &quot;;&quot;, NULL) +
IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c , &quot;Cardboard&quot;), &quot;Cardboard&quot;+ &quot;;&quot;, NULL) + IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c , &quot;Coffee Grounds&quot;), &quot;Coffee Grounds&quot;+ &quot;;&quot;, NULL) + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Glass&quot;), &quot;Glass&quot;+ &quot;;&quot;, NULL)</formula>
    <label>Streams</label>
    <type>Text</type>
</CustomField>