force-app/main/default/objects/Missed_Collection__c/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <formula>CASESAFEID(Collection_Schedule__r.Supplier__c)</formula>
    <label>Supplier Id</label>
    <type>Text</type>
</CustomField>