force-app/main/default/objects/Missed_Collection__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>Collection_Schedule__r.Time__c</formula>
    <label>Time</label>
    <type>Text</type>
</CustomField>