force-app/main/default/objects/Missed_Collection__c/recordTypes/Missed_Collections.recordType-meta.xml
<RecordType>
    <fullName>Missed_Collections</fullName>
    <active>true</active>
    <label>Missed Collections</label>
</RecordType>