force-app/main/default/objects/Missed_Collection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Daily_Dispatch__c</columns>
    <columns>Is_supplier_missed__c</columns>
    <columns>DispatchAllocated__c</columns>
    <columns>IsCompleted__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>