force-app/main/default/objects/Missed_Collection__c/listViews/Auto_Allocated_Missed_Collections.listView-meta.xml
<ListView>
    <fullName>Auto_Allocated_Missed_Collections</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LocationName__c</columns>
    <columns>Round__c</columns>
    <columns>Streams__c</columns>
    <columns>DispatchAllocated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>IsAutoAllocateDispatch__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Auto Allocated Missed Collections</label>
</ListView>