force-app/main/default/objects/Missed_Collection__c/listViews/Copy_of_Auto_Allocated_Missed_Collections.listView-meta.xml
<ListView>
    <fullName>Copy_of_Auto_Allocated_Missed_Collections</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LocationName__c</columns>
    <columns>DispatchAllocated__c</columns>
    <columns>Round__c</columns>
    <columns>ProductName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Missed_Collection__c.Missed_Collections</value>
    </filters>
    <label>Missed Allocated Today</label>
</ListView>