force-app/main/default/objects/Missed_Collection__c/listViews/Missed_Collection_Records.listView-meta.xml
<ListView>
    <fullName>Missed_Collection_Records</fullName>
    <columns>NAME</columns>
    <columns>RoundId__c</columns>
    <columns>Streams__c</columns>
    <columns>DispatchAllocated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Missed Collection Records</label>
</ListView>